# open-secret-memo

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: Cargo.toml
crates/core/data/: bip39-japanese-kanji.txt  wordlist_array.in  wordlist_kanji_array.in
crates/core/examples/: gen_vectors.rs
crates/core/fuzz/: Cargo.toml
crates/core/fuzz/fuzz_targets/: decode_standard.rs  decode_words.rs  decrypt.rs  detect_and_decode.rs
crates/core/src/: crypto.rs  error.rs  lib.rs  params.rs  payload.rs  rng.rs  vectors.rs
crates/core/src/encoding/: detect.rs  mod.rs  standard.rs  words.rs
crates/core/tests/: properties.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
docs/: 要件定義.md
docs/superpowers/plans/: 2026-06-17-osm-core-crate.md  2026-06-17-osm-recovery-kit-deploy.md  2026-06-17-osm-wasm-web.md  2026-06-18-quality-backlog-issues-8-13.md  2026-06-20-bip39-japanese-kanji-wordlist.md
recovery/: README_RESTORE.md  app.js  index.html
scripts/: build-recovery-kit.sh  gen-kanji-wordlist.py  kanji-overrides.tsv  kanji-wordlist-report.tsv
spec/: SPEC.md  test-vector.json
web/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/e2e/: roundtrip.spec.ts
web/public/: llms.txt  robots.txt  sitemap.xml
web/scripts/: build-wasm.sh
web/src/: App.test.tsx  App.tsx  index.css
web/src/components/: DecryptTab.test.tsx  (+7 more)
(+10 files in other folders)
