[package]
name = "osm-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "osm_core"

[dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
base64 = "0.22"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rand_core = "0.6"
hex = "0.4"

[dev-dependencies]
proptest = "1"

[[example]]
name = "gen_vectors"
