[package]
name = "osm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
osm-core = { path = "../core" }
wasm-bindgen = "0.2"
# osm-core's OsRng uses getrandom; the js backend is required on wasm32.
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
