[package]
name = "osm-core-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
osm-core = { path = ".." }

[[bin]]
name = "decode_standard"
path = "fuzz_targets/decode_standard.rs"
test = false
doc = false

[[bin]]
name = "decode_words"
path = "fuzz_targets/decode_words.rs"
test = false
doc = false

[[bin]]
name = "detect_and_decode"
path = "fuzz_targets/detect_and_decode.rs"
test = false
doc = false
